# example-api-template

./: .buildinfo  .cruft.json  .gitignore  .mypy.ini  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_api/: api_example.doctree  api_example.endpoints.doctree  api_example.settings.doctree  modules.doctree
.github/actions/install-project/: action.yml
.github/workflows/: checkers.yml  publication-release.yml  sphinxdocs.yml
_api/: api_example.endpoints.html  api_example.html  api_example.settings.html  modules.html
_modules/: index.html
_modules/api_example/: cli.html  errors.html  load_model.html  setup_logging.html
_modules/api_example/endpoints/: health.html  info.html  predict.html  root.html  test.html
_modules/api_example/settings/: app_settings.html  args.html
_sources/_api/: api_example.settings.rst.txt  modules.rst.txt
_static/_api/: api_example.endpoints.rst  api_example.rst
api-example/: .cruft.json  README.md  pyproject.toml
api-example/.github/workflows/: sonarcloud.yml
api-example/docs/source/_api/: modules.rst
api-example/src/api_example/: __init__.py  app.py  cli.py  errors.py  load_model.py  setup_logging.py
api-example/src/api_example/endpoints/: health.py  healthcheck.py  info.py  predict.py  root.py  test.py
api-example/src/api_example/settings/: app_settings.py  args.py  defaults.py
api-example/src/api_example/validation/: result.py
api-example/tasks/: checkers.mk  formatters.mk  reporters.mk
docs/source/: conf.py
example-api/: pyproject.toml
example-api/src/example_api/: __init__.py  app.py  cli.py  load_model.py  setup_logging.py
example-api/src/example_api/endpoints/: healthcheck.py  info.py  predict.py  root.py  test.py
example-api/src/example_api/settings/: app_settings.py  args.py
src/api_example/: cli.py  load_model.py  setup_logging.py
src/api_example/endpoints/: health.py  info.py  root.py  router.py  test.py
src/api_example/settings/: app_settings.py  args.py  defaults.py
tasks/: bumpers.mk
