[tool.poetry]
name = "api-example"
version = "0.1.0"
description = "My project description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
        { include = "api_example", from = "src" }
    ]

[tool.poetry.dependencies]
python = "^3.12"
cachetools = "^5.3.3"
fastapi = "^0.111.0"
pandas = "^2.2.2"
pydantic-settings = "^2.2.1"
setuptools = "^70.0.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"api-example" = "api_example.cli:start_api"