[tool.poetry]
name = "api-example"
version = "0.1.0"
description = "My project description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
        { include = "api_example", from = "src" }
    ]

[tool.poetry.dependencies]
python = "^3.12"
cachetools = "^5.3.3"
fastapi = "^0.111.0"
pandas = "^2.2.2"
pydantic-settings = "^2.2.1"
setuptools = "^70.0.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cookies = "^0.7.0"
pytest-shell-utilities = "^1.9.0"

[tool.poetry.group.commits.dependencies]
commitizen = "^3.18.3"
pre-commit = "^3.6.2"

[tool.poetry.group.checkers.dependencies]
bandit = "^1.7.8"
coverage = "^7.4.3"
moto = "^5.0.3"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
ruff = "^0.3.3"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.3"
nbformat = "^5.10.2"

[tool.poetry.group.publishers.dependencies]
twine = "^5.0.0"

[tool.poetry.group.documenters.dependencies]
myst-parser = "^2.0.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"api-example" = "api_example.cli:start_api"

# CONFIGURATIONS

[tool.bandit]
targets = ["src"]
skips = ["B101", "B601", "B104", "B301"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = false

[tool.coverage.run]
branch = true
source = ["api_example"]
omit = ["__init__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "3.10"
ignore_missing_imports = true
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["api_example"]}}"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py310"
exclude = ["notebooks/"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103"]